Modified HTML pages for CSS

--- a/flexbox/alignment/alignment.html
+++ b/flexbox/alignment/alignment.html
@@ -586,7 +586,7 @@
         <br>
 
 
-        <a href="../../" target="_self" rel="noopener noreferrer">Next Lesson:</a>
+        <a href="../../javascript/v-a-o/v-a-o.html" target="_self" rel="noopener noreferrer">Next Lesson: JavaScript Variables and Operators</a>
         <br>
         <a href="../flexbox.html" target="_self" rel="noopener noreferrer">Back to Flexbox</a>
         <br>
