--- a/html/boilerplate/boilerplate.html
+++ b/html/boilerplate/boilerplate.html
@@ -7,35 +7,38 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <h1>
-        Boilerplate
-    </h1>
-    <p>
-        &lt;!DOCTYPE&gt; tags must be used to indicate HTML version.
-    </p>
-    <p>
-        &lt;html&gt; tags indicate the start of the html document. Known as the root.
-    </p>
-        <ul>
-            <li>
-                "lang=en" attribute indicates language used for html document.
-            </li>
-        </ul>
-    <p>
-        &lt;head&gt; tags are used to provide instructions for the boilerplate.
-    </p>
-    <p>
-        &lt;meta charset="UTF-8"&gt; sets encoding ensures special symbols and characters from different languages correctly in the browser.
-    </p>
-    <p>
-        &lt;title&gt; provides the boilerplate context of the webpage with a title.
-    </p>
-    <p>
-        &lt;body&gt; provides html document with content.
-    </p>
-    <p>
-        &lt;h1&gt; provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.
-    </p>
+    <div class="html title">
+            Boilerplate
+    </div>
+    <br>
+    <div class="html bp text">
+        <p>
+            &lt;!DOCTYPE&gt; tags must be used to indicate HTML version.
+        </p>
+        <p>
+            &lt;html&gt; tags indicate the start of the html document. Known as the root.
+        </p>
+            <ul>
+                <li>
+                    "lang=en" attribute indicates language used for html document.
+                </li>
+            </ul>
+        <p>
+            &lt;head&gt; tags are used to provide instructions for the boilerplate.
+        </p>
+        <p>
+            &lt;meta charset="UTF-8"&gt; sets encoding ensures special symbols and characters from different languages correctly in the browser.
+        </p>
+        <p>
+            &lt;title&gt; provides the boilerplate context of the webpage with a title.
+        </p>
+        <p>
+            &lt;body&gt; provides html document with content.
+        </p>
+        <p>
+            &lt;h1&gt; provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.
+        </p>
+    </div>
     <a href="../body-elements/body-elements.html" target="_self" rel="noopener noreferrer">Next Lesson: Body Elements</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
