--- a/html/lists/lists.html
+++ b/html/lists/lists.html
@@ -7,43 +7,48 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <h1>Lists</h1>
-    <p>
-        &lt;ul&gt; creates unordered lists. Used for things like getting groceries, when order is not a neccessity.
-    </p>
-    <ul>
-        Groceries            
-        <li>
-            Meat
-        </li>
-        <li>
-            Veggies
-        </li>
-        <li>
-            Pasta
-        </li>
-    </ul>
-    <p>
-        &lt;ol&gt; creates ordered. Used for things like directions in a recipe.
-    </p>
-    <ol>
-        Recipe
+    <div class="html lists title">
+        Lists
+    </div>
+    <br>
+    <div class="html lists text">
+        <p>
+            &lt;ul&gt; creates unordered lists. Used for things like getting groceries, when order is not a neccessity.
+        </p>
+        <ul>
+            Groceries            
             <li>
-                Preheat oven.
+                Meat
             </li>
             <li>
-                Wash veggies.
+                Veggies
             </li>
             <li>
-                Line pan with veggies.
+                Pasta
             </li>
-            <li>
-                Once oven is preheated, place pan in oven. Bake for 30 minutes.
-            </li>
-    </ol>
-    <p>
-        &lt;li&gt; is used in both ordered and unordered lists to create listed items.
-    </p>
+        </ul>
+        <p>
+            &lt;ol&gt; creates ordered. Used for things like directions in a recipe.
+        </p>
+        <ol>
+            Recipe
+                <li>
+                    Preheat oven.
+                </li>
+                <li>
+                    Wash veggies.
+                </li>
+                <li>
+                    Line pan with veggies.
+                </li>
+                <li>
+                    Once oven is preheated, place pan in oven. Bake for 30 minutes.
+                </li>
+        </ol>
+        <p>
+            &lt;li&gt; is used in both ordered and unordered lists to create listed items.
+        </p>
+    </div>
     <a href="../links-and-images/l-a-i.html">Next Lesson: Links and Images</a>
     <br>
     <a href="../html.html">Back to HTML</a>
