--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -7,9 +7,46 @@
         <link rel="stylesheet" href="../../styles.css">
     </head>
     <body>
-        <h1>
-            
-        </h1>
+        <div>
+            <p class="javascript title">
+                Variables and Operators
+            </p>
+        </div>
+        <div>            
+            <p class="javascript vao-heading">
+                Overview
+            </p>
+            <p class="javascript vao-text">
+                <ul>
+                    <li>
+                        Running JavaScript code using an HTML file.
+                    </li>
+                    <li>
+                        Declaring variables with <code>let</code> and <code>const</code>.
+                    </li>
+                    <li>
+                        Performing number operations.
+                    </li>
+                    <li>
+                        Performing string operations.
+                    </li>
+                    <li>
+                        Using logical and mathematical operators.
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <div>
+            <p class="javascript vao-heading">
+                How to run JavaScript code
+            </p>
+            <p class="javascript vao-text">
+                All JavaScript written in the majority of the course will be run via browser. Later lessons in the 
+                Foundations and NodeJS path will show how to run JavaScript outside of the browser environment. This 
+                means that <b>we will let the browser execute the code, even if it comes from a file we created.</b>
+            </p>
+        </div>
+
         
         <br>
         <a href="../javascript.html" target="_self" rel="noopener noreferrer">Back to JavaScript Notes</a>
