--- a/html/body-elements/body-elements.html
+++ b/html/body-elements/body-elements.html
@@ -7,48 +7,52 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <h1>
-        Body elements
-    </h1>
-    <p>
-        Create paragraph tags using &lt;p&gt;.
-    </p>
-    <p>
-        Use &lt;strong&gt; To indicate words of importance, seriousness, and urgency without changing the meaning of the content.
-        <ul>
-            <li>
-                Except in emergencies,<strong>do not press the emergency button.</strong>
-            </li>
-        </ul>
-    </p>
-    <p>
-        Use &lt;em&gt; in order to emphasize words that change the mean of the content.
-        <ul>
-            <li>
-                A person could be tired because <em>he was up all night.</em>
-            </li>
-        </ul>
-    </p>        
-    <p>
-        Use &lt;i&gt; to change the mood or voice of words from surrounding content. Often used with foreign words, idiomatic phrases, technical terms, ship names, thoughts, etc.</p>
-        <ul>
-            <li>
-                Even when we do have fun, people are become... <i>over rambunctious.</i>
-            </li>
-        </ul>
-    <p>
-        Use &lt;b&gt; to bring attention to words without indicating importance, serious, or urgency.
-        <ul>
-            <li>
-                If I have what I wanted, I thought I'd be happy. Now... I want <b>more.</b>
-            </li>
-        </ul>
-    </p>
-    <p>
-        &lt;!-- --&gt; creates hidden comments in the line not visible to users.
-        <!-- Like so.-->
-    <p>
-        In order semantics (standards), from most to least important, goes as &lt;strong&gt;, &lt;em&gt;, &lt;i&gt;, and lastly &lt;b&gt;.</p>
+    <div class="html be title">
+            Body Elements
+    </div>
+    <br>
+    <div class="html be text">
+        <p>
+            Create paragraph tags using &lt;p&gt;.
+        </p>
+        <p>
+            Use &lt;strong&gt; To indicate words of importance, seriousness, and urgency without changing the meaning of the content.
+            <ul>
+                <li>
+                    Except in emergencies,<strong>do not press the emergency button.</strong>
+                </li>
+            </ul>
+        </p>
+        <p>
+            Use &lt;em&gt; in order to emphasize words that change the mean of the content.
+            <ul>
+                <li>
+                    A person could be tired because <em>he was up all night.</em>
+                </li>
+            </ul>
+        </p>        
+        <p>
+            Use &lt;i&gt; to change the mood or voice of words from surrounding content. Often used with foreign words, idiomatic phrases, technical terms, ship names, thoughts, etc.</p>
+            <ul>
+                <li>
+                    Even when we do have fun, people are become... <i>over rambunctious.</i>
+                </li>
+            </ul>
+        <p>
+            Use &lt;b&gt; to bring attention to words without indicating importance, serious, or urgency.
+            <ul>
+                <li>
+                    If I have what I wanted, I thought I'd be happy. Now... I want <b>more.</b>
+                </li>
+            </ul>
+        </p>
+        <p>
+            &lt;!-- --&gt; creates hidden comments in the line not visible to users.
+            <!-- Like so.-->
+        <p>
+            In order semantics (standards), from most to least important, goes as &lt;strong&gt;, &lt;em&gt;, &lt;i&gt;, and lastly &lt;b&gt;.
+        </p>
+    </div>
     <a href="../lists/lists.html" target="_self" rel="noopener noreferrer">Next Lesson: Lists</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
