Notes on variables

--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -8,46 +8,97 @@
     </head>
     <body>
         <div>
-            <p class="javascript title">
+            <p class="javascript vao title">
                 Variables and Operators
             </p>
         </div>
-        <div>            
-            <p class="javascript vao-heading">
-                Overview
-            </p>
-            <p class="javascript vao-text">
-                <ul>
-                    <li>
-                        Running JavaScript code using an HTML file.
-                    </li>
-                    <li>
-                        Declaring variables with <code>let</code> and <code>const</code>.
-                    </li>
-                    <li>
-                        Performing number operations.
-                    </li>
-                    <li>
-                        Performing string operations.
-                    </li>
-                    <li>
-                        Using logical and mathematical operators.
-                    </li>
-                </ul>
-            </p>
-        </div>
         <div>
-            <p class="javascript vao-heading">
-                How to run JavaScript code
-            </p>
-            <p class="javascript vao-text">
-                All JavaScript written in the majority of the course will be run via browser. Later lessons in the 
-                Foundations and NodeJS path will show how to run JavaScript outside of the browser environment. This 
-                means that <b>we will let the browser execute the code, even if it comes from a file we created.</b>
-            </p>
+            <div class="javascript vao header">
+                <p>
+                    Overview
+                </p>
+            </div>
+            <div class="javascript vao text">
+                <p>
+                    <ul>
+                        <li>
+                            Running JavaScript code using an HTML file.
+                        </li>
+                        <li>
+                            Declaring variables with <code>let</code> and <code>const</code>.
+                        </li>
+                        <li>
+                            Performing number operations.
+                        </li>
+                        <li>
+                            Performing string operations.
+                        </li>
+                        <li>
+                            Using logical and mathematical operators.
+                        </li>
+                    </ul>
+                </p>
+            </div>
         </div>
 
+        <div>
+            <div class="javascript vao header">
+                <p>
+                    How to run JavaScript code
+                </p>
+            </div>
+            <div class="javascript vao text">
+                <p>
+                    All JavaScript written in the majority of the course will be run via browser. Later lessons in the 
+                    Foundations and NodeJS path will show how to run JavaScript outside of the browser environment. This 
+                    means that <b>we will let the browser execute the code, even if it comes from a file we created.</b>
+                </p>
+                <p>
+                    <code>console.log(log)</code> is a command that directly prints something into the developer console
+                    of the browser.
+                </p>
+                <p>
+                    Another method to include JavaScript into a webpage is with an external script. This is similar to 
+                    linking an external CSS document to your website.
+                </p>
+                <pre>
+                    <code>
+                        &lt;script src="javascript.js"&gt;&lt;/script&gt;
+                    </code>
+                </pre>
+                <p>
+                    Just like how CSS documents have the extensions <code>.css</code> for stylesheets, JavaScript has the
+                    extension <code>.js</code>. External JavaScript files are used for more complex scripts.
+                </p>
+                <p>
+                    External JavaScript files can be named freely into almost anything. So long as they have the <code>.js</code>
+                    extension, it will function.
+                </p>
+            </div>
+        </div>
+        <div>
+            <div class="javascript vao header">
+                <p>
+                    Variables
+                </p>
+            </div>
+            <div class="javascript vao text">
+                <p>
+                    Variables are the building blocks of any program. Think of them as "storage containers" for data in 
+                    your code.
+                </p>
+                <p>
+                    Variables can be declared using the <code>let</code> keyword.
+                </p>
+            </div>
+        </div>
         
+
+
+        <script>
+            // Your JavaScript goes here!
+            console.log("Hello, World!")
+        </script>                
         <br>
         <a href="../javascript.html" target="_self" rel="noopener noreferrer">Back to JavaScript Notes</a>
         <br>
