--- a/template.html
+++ b/template.html
@@ -7,10 +7,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>
+        <div>
             
-        </h1>
-        
+        </div>
         <br>
         <a href="" target="_self" rel="noopener noreferrer"></a>        
      </body>
