--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -240,7 +240,7 @@
                 <code>
                     &lt;h2&gt;
                         Collapsing Margins
-                    &lt;/h2&gt;
+                    &lt;&#47;h2&gt;
                 </code>
             </pre>
             <pre>
@@ -271,10 +271,10 @@
                 <code>
                     &lt;h2&gt;
                         Collapsing Margins
-                    &lt;/h2&gt;
+                    &lt;&#47;h2&gt;
                     &lt;div&gt;
-                        &lt;p&gt;Example text.&lt;/p&gt;
-                    &lt;/div&gt;                        
+                        &lt;p&gt;Example text.&lt;&#47;p&gt;
+                    &lt;&#47;div&gt;                        
                 </code>
             </pre>
             <pre>
