--- a/css/intro-to-css/i-t-css.html
+++ b/css/intro-to-css/i-t-css.html
@@ -68,9 +68,9 @@
             <pre>
                 HTML
                 <code>
-                    &lt;p class="blue"&gt; This is a blue paragraph.
-                        &lt;p class="blue"&gt; This is also a blue paragraph.
-                            &lt;div class="red"&gt; This is a red paragraph.
+                    &lt;p class="blue"&gt; This is a blue paragraph.&lt;&#47;p&gt;
+                        &lt;p class="blue"&gt; This is also a blue paragraph.&lt;&#47;p&gt;
+                            &lt;div class="red"&gt; This is a red paragraph.&lt;&#47;p&gt;
                 </code>
             </pre>        
             <pre>
@@ -95,9 +95,9 @@
             <pre>
                 HTML
                 <code>
-                    &lt;p class="blue"&gt; This is a blue paragraph.
-                        &lt;p class="blue"&gt; This is also a blue paragraph.
-                            &lt;p id="red"&gt; This is a blue paragraph.
+                    &lt;p class="blue"&gt; This is a blue paragraph.&lt;&#47;p&gt;
+                        &lt;p class="blue"&gt; This is also a blue paragraph.&lt;&#47;p&gt;
+                            &lt;p id="red"&gt; This is a blue paragraph.&lt;&#47;p&gt;
                 </code>
             </pre>
             <pre>
@@ -166,8 +166,8 @@
             <pre>
                 HTML
                 <code>
-                    &lt;div class="electronic edm"&gt;Electronic Music&lt;/div&gt;
-                        &lt;p class="electronic house"&gt;This is about House Music!&lt;/p&gt;
+                    &lt;div class="electronic edm"&gt;Electronic Music&lt;&#47;div&gt;
+                        &lt;p class="electronic house"&gt;This is about House Music!&lt;&#47;p&gt;
                 </code>
             </pre>
             <pre>
@@ -186,8 +186,8 @@
             <pre>
                 HTML
                 <code>
-                    &lt;div class="electronic edm"&gt;Electronic Music&lt;/div&gt;
-                        &lt;p class="electronic house" id="chill"&gt;This is about House Music!&lt;/p&gt;
+                    &lt;div class="electronic edm"&gt;Electronic Music&lt;&#47;div&gt;
+                        &lt;p class="electronic house" id="chill"&gt;This is about House Music!&lt;&#47;p&gt;
                 </code>
             </pre>
             <pre>
@@ -220,18 +220,18 @@
             <pre>
                 HTML
                 <code>
-                    &lt;div class="parent"&gt;This is a parent.&lt;div&gt;
-                        &lt;div class="child"&gt;This is a child.&lt;div&gt;
-                            &lt;div class="child"&gt;This is a child.&lt;div&gt;
+                    &lt;div class="parent"&gt;This is a parent.&lt;&#47;div&gt;
+                        &lt;div class="child"&gt;This is a child.&lt;&#47;div&gt;
+                            &lt;div class="child"&gt;This is a child.&lt;&#47;div&gt;
 
-                    &lt;div class="child"&gt;This is a child.&lt;div&gt;
+                    &lt;div class="child"&gt;This is a child.&lt;&#47;div&gt;
                 </code>
             </pre>
             <pre>
                 CSS
                 <code>
                     .parent .child {
-                        /* Some declarations */
+                        &#47;* Some declarations *&#47;
                     }
                 </code>
             </pre>
@@ -297,7 +297,7 @@
                 <code>
                     &lt;head&gt;
                         &lt;link rel="stylesheet" href="styles.css"&gt;
-                    &lt;/head&gt;
+                    &lt;&#47;head&gt;
                 </code>
             </pre>
             <pre>
@@ -348,11 +348,11 @@
                             p {
                                 color: red;
                             }
-                        &lt;/style&gt;
-                    &lt;/head&gt;
+                        &lt;&#47;style&gt;
+                    &lt;&#47;head&gt;
                     &lt;body&gt;
                     ...
-                    &lt;/body&gt;    
+                    &lt;&#47;body&gt;    
                 </code>
             </pre>
         </p>
@@ -367,8 +367,8 @@
                 HTML
                 <code>
                     &lt;body&gt;
-                        *ltdiv style="color: white; background-color: black;"&gt;...&lt;/div&gt;
-                    &lt;/body&gt;   
+                        &lt;div style="color: white; background-color: black;"&gt;...&lt;&#47;div&gt;
+                    &lt;&#47;body&gt;   
                 </code>
             </pre>
         <p>
