--- a/javascript/v-a-o/v-a-o.html
+++ b/javascript/v-a-o/v-a-o.html
@@ -54,7 +54,18 @@
                     means that <b>we will let the browser execute the code, even if it comes from a file we created.</b>
                 </p>
                 <p>
-                    <code>console.log(log)</code> is a command that directly prints something into the developer console
+                    Create a new HTML file and add the following script:
+                    <pre>
+                        <code>
+                            &lt;script&gt;
+                                console.log("Hello, World!")
+                            &lt;&#47;script&gt;
+                        </code>
+                    </pre>
+                    When you inspect the page and enter the Console tab of the DevTools, you will see the script pop up.
+                </p>
+                <p>
+                    <code>console.log</code> is a command that directly prints something into the developer console
                     of the browser.
                 </p>
                 <p>
@@ -90,13 +101,15 @@
                 <p>
                     Variables can be declared using the <code>let</code> keyword.
                 </p>
+                <p>
+                    Create
+                </p>
             </div>
         </div>
         
 
 
         <script>
-            // Your JavaScript goes here!
             console.log("Hello, World!")
         </script>                
         <br>
